Add device tree from Vecow

--- a/hardware/nvidia/t23x/nv-public/nv-platform/Makefile
+++ b/hardware/nvidia/t23x/nv-public/nv-platform/Makefile
@@ -24,6 +24,14 @@ dtb-y += tegra234-p3768-0000+p3767-0003-nv.dtb
 dtb-y += tegra234-p3768-0000+p3767-0004-nv.dtb
 dtb-y += tegra234-p3768-0000+p3767-0005-nv.dtb
 
+#
+# eac-5000 platform
+#
+dtb-y +=tegra234-eac5000-000d+p3701-0000-nv.dtb
+dtb-y +=tegra234-eac5000-000d+p3701-0004-nv.dtb
+dtb-y +=tegra234-eac5000-000d+p3701-0005-nv.dtb
+dtb-y +=tegra234-eac5000-000d+p3701-0008-nv.dtb
+
 ifneq ($(dtb-y),)
 dtb-y := $(addprefix $(makefile-path)/,$(dtb-y))
 endif
